_Source/force-app/main/default/objects/BI_Target_Route__c/BI_Target_Route__c.object-meta.xml
<CustomObject>
    <label>Target Route</label>
    <nameField>
        <displayFormat>ROU-{000000}</displayFormat>
        <label>Target Route</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>