_Source/force-app/main/default/objects/BI_Target_Route__c/fields/BI_Destination__c.field-meta.xml
<CustomField>
    <fullName>BI_Destination__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT( BI_Destination_Entity__c ))) &amp;&amp; ISBLANK(TEXT(BI_Destination_Country__c )) &amp;&amp; ISBLANK( BI_Destination_Airport__c ),
TEXT( BI_Destination_Entity__c  ),
IF(NOT(ISBLANK(TEXT( BI_Destination_Country__c  ))) &amp;&amp; ISBLANK(TEXT( BI_Destination_Entity__c  )) &amp;&amp; ISBLANK( BI_Destination_Airport__c ),
TEXT(BI_Destination_Country__c),
IF(NOT(ISBLANK(BI_Destination_Airport__c)) &amp;&amp; ISBLANK(TEXT(BI_Destination_Entity__c )) &amp;&amp; ISBLANK(TEXT( BI_Destination_Country__c )),
BI_Destination_Airport__r.Name ,
null
)
)
)</formula>
    <label>Destination</label>
    <type>Text</type>
</CustomField>