_Source/force-app/main/default/objects/BI_Target_Route__c/fields/BI_Destination_Airport__c.field-meta.xml
<CustomField>
    <fullName>BI_Destination_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>SIP_Airport__c</referenceTo>
    <relationshipLabel>Focus Record Target Routes - Destination</relationshipLabel>
    <relationshipName>BI_Target_Routes_Destination</relationshipName>
    <type>Lookup</type>
</CustomField>