_Source/force-app/main/default/objects/BI_Target_Route__c/fields/BI_Destination_Entity__c.field-meta.xml
<CustomField>
    <fullName>BI_Destination_Entity__c</fullName>
    <label>Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Entity</valueSetName>
    </valueSet>
</CustomField>