_Source/force-app/main/default/objects/BI_Target_Route__c/fields/BI_Focus_Account__c.field-meta.xml
<CustomField>
    <fullName>BI_Focus_Account__c</fullName>
    <label>Focus Account</label>
    <referenceTo>BI_Focus_Account__c</referenceTo>
    <relationshipLabel>Target Routes</relationshipLabel>
    <relationshipName>Target_Routes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>