_Source/force-app/main/default/objects/BI_Target_Route__c/fields/BI_Origin__c.field-meta.xml
<CustomField>
    <fullName>BI_Origin__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT( BI_Origin_Entity__c ))) &amp;&amp; ISBLANK(TEXT( BI_Origin_Country__c )) &amp;&amp; ISBLANK( BI_Origin_Airport__c ),
TEXT( BI_Origin_Entity__c ),
IF(NOT(ISBLANK(TEXT( BI_Origin_Country__c ))) &amp;&amp; ISBLANK(TEXT( BI_Origin_Entity__c )) &amp;&amp; ISBLANK( BI_Origin_Airport__c ),
TEXT( BI_Origin_Country__c ),
IF(NOT(ISBLANK(BI_Origin_Airport__c)) &amp;&amp; ISBLANK(TEXT( BI_Origin_Entity__c )) &amp;&amp; ISBLANK(TEXT( BI_Origin_Country__c )),
 BI_Origin_Airport__r.Name ,
null
)
)
)</formula>
    <label>Origin</label>
    <type>Text</type>
</CustomField>