_Source/force-app/main/default/objects/BI_Target_Route__c/fields/BI_Origin_Airport__c.field-meta.xml
<CustomField>
    <fullName>BI_Origin_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin</label>
    <referenceTo>SIP_Airport__c</referenceTo>
    <relationshipLabel>Focus Record Target Routes - Origin</relationshipLabel>
    <relationshipName>BI_Target_Routes_Origin</relationshipName>
    <type>Lookup</type>
</CustomField>