_Source/force-app/main/default/objects/BI_Target_Route__c/recordTypes/BI_Airport_Based_Origin_Destination.recordType-meta.xml
<RecordType>
    <fullName>BI_Airport_Based_Origin_Destination</fullName>
    <active>true</active>
    <description>Select an Airport as the Origin &amp; Destination</description>
    <label>Airport Based Origin &amp; Destination</label>
</RecordType>