_Source/force-app/main/default/objects/BI_Target_Route__c/recordTypes/BI_Country_Based_Origin_Destination.recordType-meta.xml
<RecordType>
    <fullName>BI_Country_Based_Origin_Destination</fullName>
    <active>true</active>
    <description>Select a Country as the Origin &amp; Destination</description>
    <label>Country Based Origin &amp; Destination</label>
</RecordType>