_Source/force-app/main/default/objects/BI_Target_Route__c/recordTypes/BI_Entity_Based_Origin_Destination.recordType-meta.xml
<RecordType>
    <fullName>BI_Entity_Based_Origin_Destination</fullName>
    <active>true</active>
    <description>Select an Entity as the Origin &amp; Destination</description>
    <label>Entity Based Origin &amp; Destination</label>
</RecordType>